scripts/nullaway/wpi/url3c955055f0_dirkzhang_antlr_expressionEngine_tgz-pJ8-expression_DirkExpTestJ8.txt
../wpi/url3c955055f0_dirkzhang_antlr_expressionEngine_tgz-pJ8-expression_DirkExpTestJ8/src/expression/bean/BinaryExpression.java:12: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.leftExpression = leftExp;
                            ^
    (see http://t.uber.com/nullaway )
../wpi/url3c955055f0_dirkzhang_antlr_expressionEngine_tgz-pJ8-expression_DirkExpTestJ8/src/expression/bean/BinaryExpression.java:13: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.rightExpression = rightExp;
                             ^
    (see http://t.uber.com/nullaway )
../wpi/url3c955055f0_dirkzhang_antlr_expressionEngine_tgz-pJ8-expression_DirkExpTestJ8/src/expression/bean/value/BracketValue.java:23: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.expression = expression;
                        ^
    (see http://t.uber.com/nullaway )
../wpi/url3c955055f0_dirkzhang_antlr_expressionEngine_tgz-pJ8-expression_DirkExpTestJ8/src/expression/DirkExpTest.java:55: error: [NullAway] dereferenced expression expression is @Nullable
        expression.accept(v);
                  ^
    (see http://t.uber.com/nullaway )
../wpi/url3c955055f0_dirkzhang_antlr_expressionEngine_tgz-pJ8-expression_DirkExpTestJ8/src/expression/visitor/SQLExpressionVisitor.java:45: error: [NullAway] dereferenced expression exp.getLeftExpression() is @Nullable
        exp.getLeftExpression().accept(this);
                               ^
    (see http://t.uber.com/nullaway )
../wpi/url3c955055f0_dirkzhang_antlr_expressionEngine_tgz-pJ8-expression_DirkExpTestJ8/src/expression/visitor/SQLExpressionVisitor.java:49: error: [NullAway] dereferenced expression exp.getRightExpression() is @Nullable
        exp.getRightExpression().accept(this);
                                ^
    (see http://t.uber.com/nullaway )
../wpi/url3c955055f0_dirkzhang_antlr_expressionEngine_tgz-pJ8-expression_DirkExpTestJ8/src/expression/visitor/SQLExpressionVisitor.java:189: error: [NullAway] dereferenced expression bean.getExpression() is @Nullable
        bean.getExpression().accept(this);
                            ^
    (see http://t.uber.com/nullaway )
../wpi/url3c955055f0_dirkzhang_antlr_expressionEngine_tgz-pJ8-expression_DirkExpTestJ8/src/expression/ExpressionHelper.java:30: error: [NullAway] dereferenced expression tree is @Nullable
        switch(tree.getType()) {
                   ^
    (see http://t.uber.com/nullaway )
8 errors
